[gd_scene load_steps=12 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_ymj.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b7iaedouotojp" path="res://Art/Level/Game3Level/Level_Hide/pty_Bg.png" id="3"]
[ext_resource type="Texture2D" uid="uid://yux046qbcxgr" path="res://Art/Level/Game3Level/Level_Hide/ymjBG.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bkeosg808mm7k" path="res://Art/Level/Game3Level/Level_Hide/ymjssslfloor.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6953, 1382)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(996, 1206)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1022.5, 1206)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(51, 1206)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1862.5, 1815)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(730.75, 1420)
script = null

[node name="Level_ymj" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="floor" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(3474.5, 1092)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(1599, -121)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(2759.75, -122)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(3524, -117)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(5529.75, 186.5)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3182.63, -211)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="PtyBg" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(719, 245)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="YmjBg" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2352, 340)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Ymjssslfloor" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(2363, 551)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4264, 328)
metadata/_edit_lock_ = true
